Update PMD rules; add Sonar config (#79)
* Add Sonar rules; update for PMD
* Update GA
* Parent project version
* Bring build in sync with parent's defaults