@@ -6,6 +6,7 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.NoSuchFileException;
 import java.util.Arrays;
@@ -26,9 +27,10 @@ public class JarUtilsTest {
     private static final File JAR_FILE = new File("src/test/resources/test_folder.jar");
 
     /**
-     * The JDK's temporary directory.
+     * A pattern to check that a Jar on the classpath exists.
      */
-    private static final File TMP_DIR = new File(System.getProperty("java.io.tmpdir"));
+    private static final Pattern JAR_PATTERN =
+            Pattern.compile("jar:file://.*/.m2/repository/org/slf4j/slf4j-api/[0-9\\.]*/slf4j-api-[0-9\\.]*.jar!/");
 
     /**
      * The path to the test file.
@@ -36,10 +38,9 @@ public class JarUtilsTest {
     private static final String TEST_FILE_PATH = "test_folder/test_folder2/test_file1.txt";
 
     /**
-     * A pattern to check that a Jar on the classpath exists.
+     * The JDK's temporary directory.
      */
-    private static final Pattern JAR_PATTERN =
-            Pattern.compile("jar:file://.*/.m2/repository/org/slf4j/slf4j-api/[0-9\\.]*/slf4j-api-[0-9\\.]*.jar!/");
+    private static final File TMP_DIR = new File(System.getProperty("java.io.tmpdir"));
 
     /**
      * Test clean-up performed after test has run.
@@ -50,12 +51,32 @@ public class JarUtilsTest {
     }
 
     /**
+     * Tests the JarUtils contains method.
+     *
+     * @throws IOException If there is trouble reading the Jar file
+     */
+    @Test
+    public void testContains() throws IOException {
+        assertTrue(JarUtils.contains(new JarFile(JAR_FILE), TEST_FILE_PATH));
+    }
+
+    /**
      * Tests the {@link info.freelibrary.util.JarUtils#extract(File, String, File)} method.
      */
     @Test
     public void testExtractFileStringFile() throws IOException {
         JarUtils.extract(JAR_FILE, TEST_FILE_PATH, TMP_DIR);
         assertTrue(new File(TMP_DIR, TEST_FILE_PATH).exists());
+    }
+
+    /**
+     * Tests that supplied a file that doesn't exist.
+     *
+     * @throws IOException If there is trouble reading the file
+     */
+    @Test(expected = NoSuchFileException.class)
+    public void testExtractNoSuchFile() throws IOException {
+        JarUtils.extract("test_folder.jar", EMPTY, TMP_DIR);
     }
 
     /**
@@ -74,30 +95,10 @@ public class JarUtilsTest {
      */
     @Test
     public void testExtractURLStringFile() throws IOException {
-        JarUtils.extract(new URL(
-                JarUtils.JAR_URL_PROTOCOL + JAR_FILE.getAbsolutePath() + JarUtils.JAR_URL_DELIMITER + TEST_FILE_PATH),
-                TMP_DIR);
+        JarUtils.extract(URI.create(
+                JarUtils.JAR_URL_PROTOCOL + JAR_FILE.getAbsolutePath() + JarUtils.JAR_URL_DELIMITER + TEST_FILE_PATH)
+                .toURL(), TMP_DIR);
         assertTrue(new File(TMP_DIR, TEST_FILE_PATH).exists());
-    }
-
-    /**
-     * Tests that supplied a file that doesn't exist.
-     *
-     * @throws IOException If there is trouble reading the file
-     */
-    @Test(expected = NoSuchFileException.class)
-    public void testExtractNoSuchFile() throws IOException {
-        JarUtils.extract("test_folder.jar", EMPTY, TMP_DIR);
-    }
-
-    /**
-     * Tests the JarUtils contains method.
-     *
-     * @throws IOException If there is trouble reading the Jar file
-     */
-    @Test
-    public void testContains() throws IOException {
-        assertTrue(JarUtils.contains(new JarFile(JAR_FILE), TEST_FILE_PATH));
     }
 
     /**
